stateDiagram-v2
    [*] --> BOOT
    BOOT --> SELFTEST
    SELFTEST --> DISARMED: ok
    SELFTEST --> ZONE_TOUR: ok, boot.tour on
    SELFTEST --> FAULT: fail
    ZONE_TOUR --> DISARMED
    DISARMED --> ARMED: button
    ARMED --> DISARMED: button
    ARMED --> LINK_LOST: no data 300 ms
    LINK_LOST --> ARMED: data back
    ARMED --> FAULT: E-stop
    FAULT --> DISARMED: operator ack
